# STM32G4xx-Template

./: .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  openocd.cfg
docker/: Dockerfile
scripts/: build.cmd  build.sh  clean.cmd  enter-docker.cmd  enter-docker.sh  flash-debug-native.sh  flash-debug.sh  flash-native.sh  flash.sh  setup.cmd  setup.sh
src/: core_config.h  main.c  stm32g4xx_hal_conf.h  stm32g4xx_hal_msp.c
src/app/: main.c
src/driver/: can.c  can.h  clock.c  gpio.c  gpio.h
